[gd_scene load_steps=2 format=3 uid="uid://cgrdmkbq2yemq"]

[ext_resource type="Script" uid="uid://bvbeankmrqykb" path="res://addons/attack-manager/attack_manager_dock.gd" id="1_opjgv"]

[node name="AttackManagerDock" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(350, 600)
max_size = Vector2i(350, 600)
script = ExtResource("1_opjgv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -257.0
offset_right = 155.5
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectAttackData" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "slash_attack_data.tres"
popup/item_0/id = 0

[node name="LoadAttackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load"

[node name="NewAttackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "New"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="SceneLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scene:"

[node name="SelectedScene" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AttackSceneDialog" type="FileDialog" parent="VBoxContainer"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0

[node name="SelectSceneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Scene"

[node name="DamageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Damage:"

[node name="DamageField" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedField" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 500.0

[node name="LifetimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lifetime:"

[node name="LifetimeField" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level:"

[node name="LevelField" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2

[node name="MaxInstanceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Max Instances:"

[node name="MaxInstanceField" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="TestButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LoadAttackButton" to="." method="_on_load_attack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewAttackButton" to="." method="_on_new_attack_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/AttackSceneDialog" to="." method="_on_attack_scene_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/SelectSceneButton" to="." method="_on_select_scene_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
